content/docs/0.11.x/reference/cli/commands/keptn_configure_monitoring.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn configure monitoring"
slug: keptn_configure_monitoring
---
## keptn configure monitoring

Configures a monitoring provider

### Synopsis

Configure a monitoring solution for the deployments managed by Keptn.

**Note:** If you are executing *keptn configure monitoring dynatrace*, the service flag is optional since Keptn automatically detects the services of a project. 
See https://v1.keptn.sh/docs/0.11.x/monitoring/dynatrace/install/ for more information.


```
keptn configure monitoring <monitoring_provider> --project=<project> --service=<service> [flags]
```

### Examples

```
keptn configure monitoring dynatrace --project=PROJECTNAME
keptn configure monitoring prometheus --project=PROJECTNAME --service=SERVICENAME
```

### Options

```
  -p, --project string   The name of the project
  -s, --service string   The name of the service within the project
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn configure](../keptn_configure/)	 - Configures one of the specified parts of Keptn

###### Auto generated by spf13/cobra on 25-Nov-2021
